syntax = "proto3";
package service;

option go_package = "github.com/saferwall/saferwall";

message Message {

    enum PayloadKind {
        DBUPDATE = 0;
        UPLOAD = 1;
      }

    // SHA256 of the binary file.
    string sha256 = 1;

    // Payload represents the body of the message.
    message Payload {
        // Kind represents the type of payload.
        PayloadKind kind = 1;
        // The key to use to write the payload, can be either an
        // object stortage key or a DB document key.
        string key = 2;
        // Path represents the DB path where to write the payload
        // when the message kind is a DBUPDATE.
        string path = 3;
        // The raw body.
        bytes body = 4;
    }
    repeated Payload payload =  2;
}
